Add dynamic currency symbol support

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -130,7 +130,7 @@
                                 <div class="card bg-primary text-white">
                                     <div class="card-body">
                                         <h5 class="card-title">Total Expenses</h5>
-                                        <h2 class="card-text" id="total-expenses">$0.00</h2>
+                                        <h2 class="card-text" id="total-expenses"><span class="currency-symbol"></span>0.00</h2>
                                         <p class="card-text"><small id="expense-period">This month</small></p>
                                     </div>
                                 </div>
@@ -139,7 +139,7 @@
                                 <div class="card bg-success text-white">
                                     <div class="card-body">
                                         <h5 class="card-title">Budget Remaining</h5>
-                                        <h2 class="card-text" id="budget-remaining">$0.00</h2>
+                                        <h2 class="card-text" id="budget-remaining"><span class="currency-symbol"></span>0.00</h2>
                                         <p class="card-text"><small id="budget-period">This month</small></p>
                                     </div>
                                 </div>
@@ -476,7 +476,7 @@
                                 <div class="mb-3">
                                     <label for="expense-amount" class="form-label">Amount</label>
                                     <div class="input-group">
-                                        <span class="input-group-text">$</span>
+                                        <span class="input-group-text currency-symbol"></span>
                                         <input type="number" class="form-control" id="expense-amount" step="0.01" min="0.01" required>
                                     </div>
                                 </div>
@@ -518,7 +518,7 @@
                                 <div class="mb-3">
                                     <label for="edit-expense-amount" class="form-label">Amount</label>
                                     <div class="input-group">
-                                        <span class="input-group-text">$</span>
+                                        <span class="input-group-text currency-symbol"></span>
                                         <input type="number" class="form-control" id="edit-expense-amount" step="0.01" min="0.01" required>
                                     </div>
                                 </div>
@@ -564,7 +564,7 @@
                                 <div class="mb-3">
                                     <label for="budget-amount" class="form-label">Amount</label>
                                     <div class="input-group">
-                                        <span class="input-group-text">$</span>
+                                        <span class="input-group-text currency-symbol"></span>
                                         <input type="number" class="form-control" id="budget-amount" step="0.01" min="0.01" required>
                                     </div>
                                 </div>
@@ -622,7 +622,7 @@
                                 <div class="mb-3">
                                     <label for="edit-budget-amount" class="form-label">Amount</label>
                                     <div class="input-group">
-                                        <span class="input-group-text">$</span>
+                                        <span class="input-group-text currency-symbol"></span>
                                         <input type="number" class="form-control" id="edit-budget-amount" step="0.01" min="0.01" required>
                                     </div>
                                 </div>
