fix budgets modal

--- a/src/static/budgets.html
+++ b/src/static/budgets.html
@@ -103,8 +103,8 @@
                         </div>
                     </div>
 
-                    <!-- Reports Page -->
-                    <div id="reports-page" class="dashboard-page d-none">
+                    <!-- Modals -->
+                    <div id="modals-container">
             <!-- Add Expense Modal -->
             <div class="modal fade" id="addExpenseModal" tabindex="-1" aria-hidden="true">
                 <div class="modal-dialog">
