Add savings feature with dashboard integration

--- a/src/static/dashboard.html
+++ b/src/static/dashboard.html
@@ -23,6 +23,7 @@
                 <li class="nav-item"><a class="nav-link active" data-page="dashboard" href="/dashboard">Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" data-page="expenses" href="/expenses">Expenses</a></li>
                 <li class="nav-item"><a class="nav-link" data-page="incomes" href="/incomes">Incomes</a></li>
+                <li class="nav-item"><a class="nav-link" data-page="savings" href="/savings">Savings</a></li>
                 <li class="nav-item"><a class="nav-link" data-page="budgets" href="/budgets">Budgets</a></li>
                 <li class="nav-item"><a class="nav-link" data-page="reports" href="/reports">Reports</a></li>
             </ul>
@@ -84,6 +85,18 @@
                     <h5 class="card-title">Active Budgets</h5>
                     <h2 class="card-text" id="active-budgets">0</h2>
                     <p class="card-text"><small>Currently active</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mb-4">
+        <div class="col-md-3">
+            <div class="card bg-secondary text-white">
+                <div class="card-body">
+                    <h5 class="card-title">Total Savings</h5>
+                    <h2 class="card-text" id="total-savings"><span class="currency-symbol"></span>0.00</h2>
+                    <p class="card-text"><small>Savings Count: <span id="saving-count">0</span></small></p>
                 </div>
             </div>
         </div>
