--- a/src/static/expenses.html
+++ b/src/static/expenses.html
@@ -23,6 +23,7 @@
                 <li class="nav-item"><a class="nav-link" data-page="dashboard" href="/dashboard">Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" data-page="expenses" href="/expenses">Expenses</a></li>
                 <li class="nav-item"><a class="nav-link" data-page="incomes" href="/incomes">Incomes</a></li>
+                <li class="nav-item"><a class="nav-link" data-page="savings" href="/savings">Savings</a></li>
                 <li class="nav-item"><a class="nav-link" data-page="budgets" href="/budgets">Budgets</a></li>
                 <li class="nav-item"><a class="nav-link" data-page="reports" href="/reports">Reports</a></li>
             </ul>
