--- a/src/static/profile.html
+++ b/src/static/profile.html
@@ -23,6 +23,7 @@
                 <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" href="/expenses">Expenses</a></li>
                 <li class="nav-item"><a class="nav-link" href="/incomes">Incomes</a></li>
+                <li class="nav-item"><a class="nav-link" href="/savings">Savings</a></li>
                 <li class="nav-item"><a class="nav-link" href="/budgets">Budgets</a></li>
                 <li class="nav-item"><a class="nav-link" href="/reports">Reports</a></li>
             </ul>
