--- a/src/static/savings.html
+++ b/src/static/savings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Income Tracker</title>
+    <title>Saving Tracker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/styles.css">
@@ -22,8 +22,8 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" data-page="dashboard" href="/dashboard">Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" data-page="expenses" href="/expenses">Expenses</a></li>
-                <li class="nav-item"><a class="nav-link active" data-page="incomes" href="/incomes">Incomes</a></li>
-                <li class="nav-item"><a class="nav-link" data-page="savings" href="/savings">Savings</a></li>
+                <li class="nav-item"><a class="nav-link" data-page="incomes" href="/incomes">Incomes</a></li>
+                <li class="nav-item"><a class="nav-link active" data-page="savings" href="/savings">Savings</a></li>
                 <li class="nav-item"><a class="nav-link" data-page="budgets" href="/budgets">Budgets</a></li>
                 <li class="nav-item"><a class="nav-link" data-page="reports" href="/reports">Reports</a></li>
             </ul>
@@ -43,15 +43,15 @@
     </div>
 </nav>
 <div class="container-fluid mt-4">
-    <div id="incomes-page" class="page-container">
+    <div id="savings-page" class="page-container">
         <div class="row mb-4">
             <div class="col-md-8">
-                <h2>Incomes</h2>
-                <p class="text-muted">Manage your incomes</p>
+                <h2>Savings</h2>
+                <p class="text-muted">Manage your savings</p>
             </div>
             <div class="col-md-4 text-end">
-                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addIncomeModal">
-                    <i class="fas fa-plus me-1"></i> Add Income
+                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addSavingModal">
+                    <i class="fas fa-plus me-1"></i> Add Saving
                 </button>
             </div>
         </div>
@@ -61,8 +61,8 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-4">
-                                <label for="income-date-filter" class="form-label">Date Range</label>
-                                <select class="form-select" id="income-date-filter">
+                                <label for="saving-date-filter" class="form-label">Date Range</label>
+                                <select class="form-select" id="saving-date-filter">
                                     <option value="this-month">This Month</option>
                                     <option value="last-month">Last Month</option>
                                     <option value="last-3-months">Last 3 Months</option>
@@ -70,30 +70,20 @@
                                     <option value="custom">Custom Range</option>
                                 </select>
                             </div>
-                            <div class="col-md-4">
-                                <label for="income-type-filter" class="form-label">Type</label>
-                                <select class="form-select" id="income-type-filter">
-                                    <option value="">All Types</option>
-                                    <option value="Salary">Salary</option>
-                                    <option value="Business">Business</option>
-                                    <option value="Investments">Investments</option>
-                                    <option value="Other">Other</option>
-                                </select>
-                            </div>
-                            <div class="col-md-4 d-none" id="income-custom-date-range">
+                            <div class="col-md-4 d-none" id="saving-custom-date-range">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <label for="income-start-date" class="form-label">Start Date</label>
-                                        <input type="date" class="form-control" id="income-start-date">
+                                        <label for="saving-start-date" class="form-label">Start Date</label>
+                                        <input type="date" class="form-control" id="saving-start-date">
                                     </div>
                                     <div class="col-md-6">
-                                        <label for="income-end-date" class="form-label">End Date</label>
-                                        <input type="date" class="form-control" id="income-end-date">
+                                        <label for="saving-end-date" class="form-label">End Date</label>
+                                        <input type="date" class="form-control" id="saving-end-date">
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-2 d-flex align-items-end">
-                                <button class="btn btn-primary w-100" id="apply-income-filters">Apply Filters</button>
+                                <button class="btn btn-primary w-100" id="apply-saving-filters">Apply Filters</button>
                             </div>
                         </div>
                     </div>
@@ -109,14 +99,13 @@
                                 <thead>
                                     <tr>
                                         <th>Date</th>
-                                        <th>Type</th>
                                         <th>Description</th>
                                         <th>Amount</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
-                                <tbody id="incomes-table">
-                                    <!-- Incomes will be loaded here -->
+                                <tbody id="savings-table">
+                                    <!-- Savings will be loaded here -->
                                 </tbody>
                             </table>
                         </div>
@@ -125,98 +114,72 @@
             </div>
         </div>
     </div>
-    <!-- Add Income Modal -->
-    <div class="modal fade" id="addIncomeModal" tabindex="-1" aria-hidden="true">
+    <!-- Add Saving Modal -->
+    <div class="modal fade" id="addSavingModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Add Income</h5>
+                    <h5 class="modal-title">Add Saving</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="add-income-form">
+                    <form id="add-saving-form">
                         <div class="mb-3">
-                            <label for="income-amount" class="form-label">Amount</label>
+                            <label for="saving-amount" class="form-label">Amount</label>
                             <div class="input-group">
                                 <span class="input-group-text currency-symbol"></span>
-                                <input type="number" class="form-control" id="income-amount" step="0.01" min="0.01" required>
+                                <input type="number" class="form-control" id="saving-amount" step="0.01" min="0.01" required>
                             </div>
                         </div>
                         <div class="mb-3">
-                            <label for="income-type" class="form-label">Type</label>
-                            <select class="form-select" id="income-type" required>
-                                <option value="Salary">Salary</option>
-                                <option value="Business">Business</option>
-                                <option value="Investments">Investments</option>
-                                <option value="Other">Other</option>
-                            </select>
-                        </div>
-                        <div class="mb-3 d-none" id="other-source-group">
-                            <label for="other-source" class="form-label">Other Source</label>
-                            <input type="text" class="form-control" id="other-source">
+                            <label for="saving-date" class="form-label">Date</label>
+                            <input type="date" class="form-control" id="saving-date" required>
                         </div>
                         <div class="mb-3">
-                            <label for="income-date" class="form-label">Date</label>
-                            <input type="date" class="form-control" id="income-date" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="income-description" class="form-label">Description</label>
-                            <input type="text" class="form-control" id="income-description">
+                            <label for="saving-description" class="form-label">Description</label>
+                            <input type="text" class="form-control" id="saving-description">
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="save-income">Save Income</button>
+                    <button type="button" class="btn btn-primary" id="save-saving">Save Saving</button>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Edit Income Modal -->
-    <div class="modal fade" id="editIncomeModal" tabindex="-1" aria-hidden="true">
+    <!-- Edit Saving Modal -->
+    <div class="modal fade" id="editSavingModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Edit Income</h5>
+                    <h5 class="modal-title">Edit Saving</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="edit-income-form">
-                        <input type="hidden" id="edit-income-id">
+                    <form id="edit-saving-form">
+                        <input type="hidden" id="edit-saving-id">
                         <div class="mb-3">
-                            <label for="edit-income-amount" class="form-label">Amount</label>
+                            <label for="edit-saving-amount" class="form-label">Amount</label>
                             <div class="input-group">
                                 <span class="input-group-text currency-symbol"></span>
-                                <input type="number" class="form-control" id="edit-income-amount" step="0.01" min="0.01" required>
+                                <input type="number" class="form-control" id="edit-saving-amount" step="0.01" min="0.01" required>
                             </div>
                         </div>
                         <div class="mb-3">
-                            <label for="edit-income-type" class="form-label">Type</label>
-                            <select class="form-select" id="edit-income-type" required>
-                                <option value="Salary">Salary</option>
-                                <option value="Business">Business</option>
-                                <option value="Investments">Investments</option>
-                                <option value="Other">Other</option>
-                            </select>
-                        </div>
-                        <div class="mb-3 d-none" id="edit-other-source-group">
-                            <label for="edit-other-source" class="form-label">Other Source</label>
-                            <input type="text" class="form-control" id="edit-other-source">
+                            <label for="edit-saving-date" class="form-label">Date</label>
+                            <input type="date" class="form-control" id="edit-saving-date" required>
                         </div>
                         <div class="mb-3">
-                            <label for="edit-income-date" class="form-label">Date</label>
-                            <input type="date" class="form-control" id="edit-income-date" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="edit-income-description" class="form-label">Description</label>
-                            <input type="text" class="form-control" id="edit-income-description">
+                            <label for="edit-saving-description" class="form-label">Description</label>
+                            <input type="text" class="form-control" id="edit-saving-description">
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-danger me-auto" id="delete-income">Delete</button>
-                    <button type="button" class="btn btn-primary" id="update-income">Update Income</button>
+                    <button type="button" class="btn btn-danger me-auto" id="delete-saving">Delete</button>
+                    <button type="button" class="btn btn-primary" id="update-saving">Update Saving</button>
                 </div>
             </div>
         </div>
