--- a/src/static/dashboard.html
+++ b/src/static/dashboard.html
@@ -7,6 +7,141 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <link rel="stylesheet" href="/styles.css">
+        <style>
+            /* Additional dashboard-specific styles */
+            .metric-card {
+                background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+                color: white;
+                border-radius: 15px;
+                overflow: hidden;
+                position: relative;
+            }
+
+            .metric-card::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                right: 0;
+                width: 100px;
+                height: 100px;
+                background: rgba(255, 255, 255, 0.1);
+                border-radius: 50%;
+                transform: translate(30px, -30px);
+            }
+
+            .metric-card.bg-success {
+                background: linear-gradient(135deg, #28a745, #20c997);
+            }
+
+            .metric-card.bg-info {
+                background: linear-gradient(135deg, #17a2b8, #6f42c1);
+            }
+
+            .metric-card.bg-warning {
+                background: linear-gradient(135deg, #ffc107, #fd7e14);
+            }
+
+            .metric-card.bg-secondary {
+                background: linear-gradient(135deg, #6c757d, #495057);
+            }
+
+            .chart-container {
+                position: relative;
+                height: 350px;
+                margin: 20px 0;
+            }
+
+            .recent-item {
+                padding: 12px 0;
+                border-bottom: 1px solid #eee;
+                transition: background-color 0.2s;
+            }
+
+            .recent-item:hover {
+                background-color: #f8f9fa;
+                border-radius: 8px;
+                margin: 0 -15px;
+                padding-left: 15px;
+                padding-right: 15px;
+            }
+
+            .recent-item:last-child {
+                border-bottom: none;
+            }
+
+            .budget-progress {
+                border-radius: 10px;
+                overflow: hidden;
+                margin-bottom: 15px;
+                background-color: #f8f9fa;
+                padding: 15px;
+            }
+
+            .quick-action-btn {
+                border-radius: 50px;
+                padding: 12px 24px;
+                font-weight: 600;
+                text-transform: uppercase;
+                letter-spacing: 0.5px;
+                transition: all 0.3s;
+            }
+
+            .quick-action-btn:hover {
+                transform: translateY(-2px);
+                box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+            }
+
+            .welcome-section {
+                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+                color: white;
+                border-radius: 20px;
+                padding: 30px;
+                margin-bottom: 30px;
+                position: relative;
+                overflow: hidden;
+            }
+
+            .welcome-section::before {
+                content: '';
+                position: absolute;
+                top: -50%;
+                right: -50%;
+                width: 100%;
+                height: 100%;
+                background: rgba(255, 255, 255, 0.1);
+                border-radius: 50%;
+                transform: rotate(45deg);
+            }
+
+            .welcome-section h2 {
+                margin-bottom: 10px;
+                font-weight: 700;
+            }
+
+            .metric-icon {
+                font-size: 2.5rem;
+                opacity: 0.8;
+                position: absolute;
+                right: 20px;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+
+            @media (max-width: 768px) {
+                .chart-container {
+                    height: 250px;
+                }
+
+                .metric-card {
+                    margin-bottom: 15px;
+                }
+
+                .welcome-section {
+                    padding: 20px;
+                    text-align: center;
+                }
+            }
+        </style>
     </head>
     <body>
         <!-- Navigation -->
@@ -506,5 +641,133 @@
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="/app.js"></script>
 
+        <script>
+            // Additional dashboard-specific functionality
+            document.addEventListener('DOMContentLoaded', function () {
+                // Set default date for expense form
+                const expenseDate = document.getElementById('expense-date');
+                if (expenseDate) {
+                    expenseDate.valueAsDate = new Date();
+                }
+
+                // Add smooth scrolling for internal links
+                document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+                    anchor.addEventListener('click', function (e) {
+                        e.preventDefault();
+                        const target = document.querySelector(this.getAttribute('href'));
+                        if (target) {
+                            target.scrollIntoView({
+                                behavior: 'smooth',
+                                block: 'start'
+                            });
+                        }
+                    });
+                });
+
+                // Add loading states to buttons
+                document.querySelectorAll('button[type="submit"], #save-expense, #save-budget, #update-expense, #update-budget').forEach(btn => {
+                    btn.addEventListener('click', function () {
+                        const originalText = this.innerHTML;
+                        this.innerHTML = '<i class="fas fa-spinner fa-spin me-1"></i>Processing...';
+                        this.disabled = true;
+
+                        // Reset after 3 seconds (should be handled by actual form submission)
+                        setTimeout(() => {
+                            this.innerHTML = originalText;
+                            this.disabled = false;
+                        }, 3000);
+                    });
+                });
+
+                // Auto-refresh data every 5 minutes
+                setInterval(() => {
+                    if (typeof loadDashboardData === 'function') {
+                        loadDashboardData();
+                    }
+                }, 300000); // 5 minutes
+
+                // Add keyboard shortcuts
+                document.addEventListener('keydown', function (e) {
+                    // Ctrl/Cmd + E = Add Expense
+                    if ((e.ctrlKey || e.metaKey) && e.key === 'e') {
+                        e.preventDefault();
+                        const addExpenseModal = new bootstrap.Modal(document.getElementById('addExpenseModal'));
+                        addExpenseModal.show();
+                    }
+
+                    // Ctrl/Cmd + B = Add Budget
+                    if ((e.ctrlKey || e.metaKey) && e.key === 'b') {
+                        e.preventDefault();
+                        const addBudgetModal = new bootstrap.Modal(document.getElementById('addBudgetModal'));
+                        addBudgetModal.show();
+                    }
+                });
+
+                // Add tooltips to metric cards
+                const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+                tooltipTriggerList.map(function (tooltipTriggerEl) {
+                    return new bootstrap.Tooltip(tooltipTriggerEl);
+                });
+
+                // Animate numbers on load
+                function animateValue(element, start, end, duration) {
+                    let startTimestamp = null;
+                    const step = (timestamp) => {
+                        if (!startTimestamp) startTimestamp = timestamp;
+                        const progress = Math.min((timestamp - startTimestamp) / duration, 1);
+                        const current = progress * (end - start) + start;
+
+                        // Fix: Use a proper check for currency symbol and set text correctly
+                        if (element.classList.contains('currency-symbol') || element.textContent.trim().match(/^[\$\€\£\₨]/)) {
+                            // Get the currency symbol from the element or default to $
+                            let symbol = element.textContent.trim().charAt(0);
+                            if (!/[\$\€\£\₨]/.test(symbol)) symbol = '$';
+                            element.textContent = symbol + current.toFixed(2);
+                        } else {
+                            element.textContent = Math.floor(current);
+                        }
+
+                        if (progress < 1) {
+                            window.requestAnimationFrame(step);
+                        }
+                    };
+                    window.requestAnimationFrame(step);
+                }
+
+                // Animate metric cards when they come into view
+                const observer = new IntersectionObserver((entries) => {
+                    entries.forEach(entry => {
+                        if (entry.isIntersecting) {
+                            entry.target.style.opacity = '1';
+                            entry.target.style.transform = 'translateY(0)';
+                        }
+                    });
+                }, { threshold: 0.1 });
+
+                document.querySelectorAll('.metric-card').forEach(card => {
+                    card.style.opacity = '0';
+                    card.style.transform = 'translateY(20px)';
+                    card.style.transition = 'all 0.6s ease-out';
+                    observer.observe(card);
+                });
+            });
+
+            // Enhanced error handling
+            window.addEventListener('error', function (e) {
+                console.error('Dashboard error:', e.error);
+                // Could add user-friendly error notification here
+            });
+
+            // Add chart resize handler
+            window.addEventListener('resize', function () {
+                if (typeof charts !== 'undefined') {
+                    Object.values(charts).forEach(chart => {
+                        if (chart && typeof chart.resize === 'function') {
+                            chart.resize();
+                        }
+                    });
+                }
+            });
+        </script>
     </body>
 </html>
